# depende

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  mkdocs.yml  pyproject.toml
.github/: labeler.yml
.github/workflows/: add-to-project.yml  build-docs.yml  create-draft-release.yml  deploy-docs.yml  detect-conflicts.yml  guard-dependencies.yml  issue-manager.yml  labeler.yml  latest-changes.yml  pre-commit.yml  prepare-release.yml  publish.yml  smokeshow.yml  test-redistribute.yml  test.yml  zizmor.yml
docs/: index.md  release-notes.md
docs/css/: custom.css
scripts/: deploy_docs_status.py  docs.py  prepare_release.py
src/depende/: __init__.py  main.py
tests/: test_depends.py
