[project]
name = "depende"
version = "0.0.1"
description = "Reusable dependency declarations"
readme = "README.md"
authors = [
    { name = "Sebastián Ramírez", email = "tiangolo@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []


[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]
